 * GaussianProcessConditionalCovariance left the experimental module
 * PosteriorDistribution left the experimental module
 * Removed deprecated ComposedDistribution, ComposedCopula classes aliases
 * Removed deprecated NegativeBinomial, NegativeBinomialFactory classes aliases

=== Documentation ===

=== Python module ===

=== Miscellaneous ===



== 1.26 release (2025-11-25) == #release-1.26

=== Library ===

==== Major changes ====

==== New classes ====
 * HiGHS linear solver (openturns.experimental)
 * LinearProblem (openturns.experimental)
 * FiniteOrthogonalFunctionFactory (openturns.experimental)

==== API changes ====
 * Removed deprecated MetaModelResult.set/getResiduals, MetaModelResult.set/getRelativeErrors (see MetaModelValidation)
 * Removed alias for deprecated class ConditionalRandomVector
 * LatentVariableModel left the experimental module
 * UniformOrderStatistics left the experimental module
 * RankSobolSensitivityAlgo left the experimental module
 * ExperimentIntegration left the experimental module
 * CubaIntegration left the experimental module
 * SamplePartition left the experimental module
 * GeneralizedParetoValidation left the experimental module
 * FunctionalChaosValidation left the experimental module
 * PointToFieldFunctionaChaosAlgorithm left the experimental module
 * Deprecated DeconditionedDistribution in favor of CompoundDistribution
 * Deprecated DeconditionedRandomVector in favor of CompoundRandomVector
 * Deprecated SpecFunc.IsNormal (use std::isfinite or math.isfinite)
 * Deprecated ResourceMap.Reload in favor of Reset

=== Documentation ===
 * Added the example 'Pitfalls in  polynomial chaos expansion due to the input distribution'
 * Improved Pearson and Spearman theory files
 * Improved API and examples index

=== Python module ===
 * Add deepcopy support for all objects

=== Miscellaneous ===
 * New LOLA-Voronoi mean sampling size option to control sampling per candidate