@@ -198,4 +198,27 @@ Notes
 -----
 As the same basis is used for each marginal output, each :math:`\vect{\beta}^\ell` vector is of dimension
 :math:`b`, the size of the functional basis.)RAW"
+
 // ---------------------------------------------------------------------
+
+%feature("docstring") OT::GaussianProcessFitterResult::getCholeskyFactor
+R"RAW(Accessor to the Cholesky factor of the covariance matrix.
+
+Returns
+-------
+L : :class:`~openturns.TriangularMatrix`
+    Cholesky factor :math:`\mat{L}_{\vect{p}^*}` of the covariance matrix, which can thus be written :math:`\mat{L}_{\vect{p}^*} \mat{L}_{\vect{p}^*}^T`.)RAW"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::GaussianProcessFitterResult::getStandardizedOutput
+R"RAW(Accessor to the standardized output.
+
+Returns
+-------
+rho : :class:`~openturns.Point`
+    Standardized output vector.
+
+Notes
+-----
+The standardized output vector is defined as :math:`\mat{L}_{\vect{p}^*}^{-1}(\vect{y} - \vect{m}_{\vect{\beta}^*(\vect{p}^*)})`.)RAW"
